--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3"
   },
   "devDependencies": {
@@ -24,4 +25,3 @@
   "author": "",
   "license": "ISC"
 }
-
