--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1"
