--- a/Back-End/.env
+++ b/Back-End/.env
@@ -1,2 +1,3 @@
 PORT = 3001
 DATABASE_URI = `mongodb+srv://chumani:chumani@placecluster.mqpceux.mongodb.net/Beautiful_Places_Database?retryWrites=true&w=majority&appName=PlaceCluster`
+JWT_SECRET=randomSecretKey123
